--- a/src/component/widgetLg/WidgetLg.css
+++ b/src/component/widgetLg/WidgetLg.css
@@ -9,11 +9,27 @@
     font-size: 22px;
     font-weight: 600;
 }
+.widgetLgTable{
+    width: 100%;
+    border-spacing: 20px;
+}
+.widgetLgTh{
+    text-align: left;
+}
+.widgetLgUser{
+    display: flex;
+    align-items: center;
+    font-weight: 600;
+}
 .widgetLgImg{
     width: 40px;
     height: 40px;
+    margin-right: 10px;
     border-radius: 50%;
     object-fit: cover;
+}
+.widgetLgDate,.widgetLgAmount{
+    font-weight: 300;
 }
 .widgetLgButton{
     padding: 5px 7px;
